--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coreschema==0.0.4
 cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.2.4
+django-cors-headers==3.7.0
 django-environ==0.4.5
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
