--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -24,11 +24,13 @@ numpy==1.21.0
 oauthlib==3.1.1
 openpyxl==3.0.7
 pandas==1.2.5
+Pillow==8.3.0
 pycparser==2.20
 PyJWT==2.1.0
 python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2021.1
+reportlab==3.5.68
 requests==2.25.1
 requests-oauthlib==1.3.0
 six==1.16.0
