[UPDATE] requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ djangorestframework-simplejwt==4.7.1
 djoser==2.1.0
 et-xmlfile==1.1.0
 idna==2.10
+reportlab
 itypes==1.2.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
